tab for user's trades added

--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -8,21 +9,22 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="300.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.gdax.gui.MainController">
+<VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gdax.gui.MainController">
     <children>
         <HBox prefHeight="100.0" prefWidth="200.0">
             <children>
-                <TabPane prefHeight="200.0" prefWidth="314.0" tabClosingPolicy="UNAVAILABLE">
+                <TabPane minHeight="-Infinity" prefHeight="200.0" prefWidth="314.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
-                        <Tab text="Transfers">
+                        <Tab fx:id="tradesTab" text="Trades">
                             <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="72.0" prefWidth="314.0"/>
+                                <ScrollPane>
+                                    <VBox fx:id="tradesContentBox" spacing="10.0" />
+                                </ScrollPane>
                             </content>
                         </Tab>
                         <Tab text="Untitled Tab 2">
                             <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                             </content>
                         </Tab>
                     </tabs>
@@ -31,20 +33,20 @@
                     <children>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                             <children>
-                                <Label text="Sell price"/>
-                                <Label fx:id="sellPrice" text="unknown"/>
+                                <Label text="Sell price" />
+                                <Label fx:id="sellPrice" text="unknown" />
                             </children>
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                             <children>
-                                <Label text="price spread"/>
-                                <Label fx:id="spreadPrice" text="unknown"/>
+                                <Label text="price spread" />
+                                <Label fx:id="spreadPrice" text="unknown" />
                             </children>
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                             <children>
-                                <Label text="Buy price"/>
-                                <Label fx:id="buyPrice" text="unknown"/>
+                                <Label text="Buy price" />
+                                <Label fx:id="buyPrice" text="unknown" />
                             </children>
                         </VBox>
                     </children>
@@ -53,14 +55,14 @@
         </HBox>
         <HBox prefHeight="100.0" prefWidth="200.0">
             <children>
-                <Label text="wenn sell prise großer als "/>
-                <TextField fx:id="sellPriceField"/>
+                <Label text="wenn sell prise großer als " />
+                <TextField fx:id="sellPriceField" />
             </children>
         </HBox>
         <HBox prefHeight="100.0" prefWidth="200.0">
             <children>
-                <Label text="wenn  buy prise kleiner als "/>
-                <TextField fx:id="buyPriceField"/>
+                <Label text="wenn  buy prise kleiner als " />
+                <TextField fx:id="buyPriceField" />
             </children>
         </HBox>
     </children>
